Bug 863618. Make Range.getClientRects/getBoundingClientRect take account of CSS transforms. r=tn